--- a/CSS/readBook.css
+++ b/CSS/readBook.css
@@ -4,6 +4,9 @@
   --primary : #f3f3f3;
   --secondry :#ffffff;
 }
+::-webkit-scrollbar-track {
+  background: transparent;
+}
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -115,11 +118,16 @@ svg {
   position: sticky;
   top: 10px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+  text-align: right;
+  width: 290px;
+}
+.filter-section2{
+  text-align: right;
 
 }
-
 .filter-group {
   margin-bottom: 20px;
+  height: fit-content;
 }
 .filter-group label{
   margin-bottom: 10px;
@@ -157,6 +165,20 @@ input[type="text"] {
 
 .filter-group .sort {
   font-size: 16px;
+}
+#search-categories{
+  height: 30px;
+  font-size: 14px;
+  text-align: right;
+}
+#sort{
+  text-align: right;
+  height: 35px;
+  font-size: 14px;
+  padding: 5px;
+}
+hr{
+  color: #7b7b7b !important;
 }
 
 /* -------- Filter end   ------------ */
@@ -646,10 +668,156 @@ flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  gap: 20px;
 }
  .navbar-toggler{
   display: none;
  }
+ /* Start Global Rules */
+
+:root{
+  --primary : #f3f3f3;
+  --secondry :#ffffff;
+}
+ Global Reset
+ {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+} 
+
+html {
+  scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+}
+
+ul {
+  list-style: none;
+}
+.bodyContainer{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: flex-start;
+}
+.container {
+  padding-left: 0px;
+  padding-right: 25px;
+  margin: auto;
+}
+
+
+
+
+/* s container - 3 cards in one row and 2 rows */
+
+
+/* Add media query for responsiveness */
+@media (max-width: 350px) {
+  .buttons{
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+}
+
+@media (max-width: 480px) {
+  .cards-container {
+    grid-template-columns: repeat(1, 1px); /* 1 card per row for very small screens */
+  }
+}
+
+.p3 {
+  font-size: 20px;
+  text-align: center;
+  color: white;
+}
+/* General styles for the filter section */
+
+
+input[type="radio"], input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+
+
+select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+}
+
+.checkbox-group input[type="checkbox"], .radio-group input[type="radio"] {
+  margin-right: 5px;
+}
+
+.checkbox-group label, .radio-group label {
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.checkbox-group {
+  margin-top: 10px;
+}
+
+
+
+#sort, #sort-more, #search-categories, #search-publishers {
+  width: 100%;
+  font-size: 16px;
+}
+
+#sort-more {
+  margin-top: 10px;
+}
+
+#search-publishers {
+  margin-top: 10px;
+}
+
+/* Styling for responsiveness */
+
+.search-container {
+  width: 100%;
+  max-width: 400px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.results {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.result-item {
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+.result-item:last-child {
+  border-bottom: none;
+}
+
 @media screen  and (width < 800px) {
   .showDescription{
 
@@ -733,6 +901,9 @@ flex-grow: 1;
   }
   .mobileHide{
     display: none;
+  }
+  .formElements .searchButton {
+    height: 41px;
   }
 }
 @media (max-width: 400px) {
